--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,13 @@ spring.http.encoding.enabled=true
 spring.main.allow-circular-references=true
 spring.liquibase.change-log=classpath:liquibase-changeLog.xml
 
+# Spring datasource
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/accidents
+jdbc.driver=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=password
 
-#spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/accidents
-#jdbc.driver=org.postgresql.Driver
-#spring.datasource.username=postgres
-#spring.datasource.password=password
+# Hibernate properties
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.show-sql = false
+spring.jpa.properties.hibernate.format_sql=true
