--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.datasource.password=password
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.format_sql=true
+
+# files properties
+file.directory=files
+spring.servlet.multipart.max-file-size=10MB
