--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
             <version>4.8.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
