--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.properties.hibernate.format_sql=true
 # files properties
 file.directory=files
 spring.servlet.multipart.max-file-size=10MB
+
+server.error.include-message=always
