--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.liquibase.change-log=classpath:liquibase-changeLog.xml
 
 # Spring datasource
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/accidents
-jdbc.driver=org.postgresql.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=password
 
